
[package]
name = "oil"
version = "0.2.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
readme = "README.md"
license = "MIT"
keywords = ["ui", "opengl", "gamedev"]
description = "User interface library oriented for games. It includes user interface languages."
exclude = [
    ".travis.yml",
    "examples/*",
    "docs/*",
    "mkdocs.yml"
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false

[dependencies]
bitflags = "0.4.0"
image = "0.6.1"
cgmath = "0.7.0"
num = "0.1.30"

[dependencies.oil_parsers]
path = "./parsers"
version = "=0.2.0"

[dependencies.oil_shared]
path = "./shared"
version = "=0.2.0"

[dependencies.oil_databindings]
path = "./data_bindings"
version= "=0.2.0"

[dependencies.glium]
version = "0.13.5"

[dev-dependencies]
clock_ticks = "*"
