
[package]
name = "oil_parsers"
version = "0.2.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
license = "MIT"
keywords = ["ui", "parser"]
description = "Parsers for oil."
build = "build.rs"

[dependencies]
xml-rs = "0.2.2"
phf = "0.7.10"
num = "0.1.29"

[build-dependencies]
phf_codegen = "0.7.10"

[dependencies.oil_shared]
path = "../shared"
version = "=0.2.0"
