
[package]
name = "oil_parsers"
version = "0.2.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
license = "MIT"
keywords = ["ui", "parser"]
description = "Parsers for oil."
build = "build.rs"

[dependencies]
phf = "0.7.12"
log = "0.3.6"
num = "0.1.30"
unicode-xid = "0.0.2"
lalrpop-util = "0.11.0"

[build-dependencies]
phf_codegen = "0.7.12"
lalrpop = "0.11.0"

[dependencies.oil_repr]
path = "../repr"
version = "=0.2.0"
