
[package]
name = "oil_repr"
version = "0.3.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
license = "MIT"
keywords = ["ui", "oil"]
description = "Support code shared by oil libraries. Include binary representation."
build = "build.rs"

[dependencies]
phf = "0.7.12"

[build-dependencies]
phf_codegen = "0.7.12"
